<resources>
    <string-array name="spinnerItems">
        <item>Sedentary (less 30min/day of Exercise)</item>
        <item>Lightly Active (+/- 30min/day of Exercise)</item>
        <item>Active (+/- 1h45min/day of Exercise)</item>
        <item>Very Active (+/- 4h15min/day of Exercise)</item>
    </string-array>
    <string name="app_name">Hytracked App</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="tab_text_1">Home</string>
    <string name="tab_text_2">Statistics</string>
    <string name="tab_text_3">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hydration_level">Hydration Level</string>
    <string name="percentage">37,5 %</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="litres">Litres</string>
    <string name="goal_2l">Goal: 2L</string>
    <string name="litres_750l">Litres: 0,75L</string>
    <string name="jose_santos">José Santos</string>
    <string name="weight">Weight</string>
    <string name="activity_level">Activity Level</string>
    <string name="Sumbit">Submit</string>
    <string name="Name">Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
