<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    tools:context=".TabOneFragment">

    <!-- TODO: Update blank fragment layout -->
    <!--<TextView
        android:id="@+id/section_label"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Hello blank fragment" />-->

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/goal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="452dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/goal_2l"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/Litres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="452dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/litres_750l"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/hydration_level"
            android:layout_width="345dp"
            android:layout_height="52dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="152dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/hydration_level"
            android:textAlignment="center"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.521"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/percentage"
            android:layout_width="333dp"
            android:layout_height="85dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="68dp"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:text="@string/percentage"
            android:textAlignment="center"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="60sp"
            android:typeface="sans"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.514"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="290dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.041">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="233dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="70dp"
                app:srcCompat="@drawable/human" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="120dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="8dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:minWidth="900dp"
                android:progress="25"
                android:rotation="270" />

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</LinearLayout>